--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,6 +7,8 @@
 }
 html, body {
     overflow-x: hidden;
+    min-height: 100%;
+    /* background-color: black; */
 }
 body {
     margin: 0px;
